; ModuleID = '/home/carl/AnghaBench/radare2/libr/anal/extr_class.c_r_anal_class_list_json.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/anal/extr_class.c_r_anal_class_list_json.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32*, i32* }

@r_anal_class_list_json_cb = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @r_anal_class_list_json to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @r_anal_class_list_json(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_3__, align 8
  store i32* %0, i32** %2, align 8
  %5 = call i32* (...) @pj_new()
  store i32* %5, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  br label %26

9:                                                ; preds = %1
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @pj_a(i32* %10)
  %12 = load i32*, i32** %2, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 1
  store i32* %12, i32** %13, align 8
  %14 = load i32*, i32** %3, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  store i32* %14, i32** %15, align 8
  %16 = load i32*, i32** %2, align 8
  %17 = load i32, i32* @r_anal_class_list_json_cb, align 4
  %18 = call i32 @r_anal_class_foreach(i32* %16, i32 %17, %struct.TYPE_3__* %4)
  %19 = load i32*, i32** %3, align 8
  %20 = call i32 @pj_end(i32* %19)
  %21 = load i32*, i32** %3, align 8
  %22 = call i32 @pj_string(i32* %21)
  %23 = call i32 @r_cons_printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %22)
  %24 = load i32*, i32** %3, align 8
  %25 = call i32 @pj_free(i32* %24)
  br label %26

26:                                               ; preds = %9, %8
  ret void
}

declare dso_local i32* @pj_new(...) #1

declare dso_local i32 @pj_a(i32*) #1

declare dso_local i32 @r_anal_class_foreach(i32*, i32, %struct.TYPE_3__*) #1

declare dso_local i32 @pj_end(i32*) #1

declare dso_local i32 @r_cons_printf(i8*, i32) #1

declare dso_local i32 @pj_string(i32*) #1

declare dso_local i32 @pj_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
